--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Quiz-app </title>
 </head>
 
-<!-- <body>
+<body>
     <div class="container">
         <div class="score">
             <span id="user-score">0</span>
@@ -30,12 +30,12 @@
             <button class="btn btn-submit" id="submit">Submit</button>
         </div>
     </div>
- -->
 
 
 
 
-<script src="./js/index.js"></script>
+
+    <script src="./js/index.js"></script>
 
 </body>
 
